[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/HangerGame/decoration/medievalTile_210.png" type="Texture" id=1]
[ext_resource path="res://Tutorial/Tutorial.gd" type="Script" id=2]
[ext_resource path="res://assets/HangerGame/HangerGameTileMap.tres" type="TileSet" id=3]
[ext_resource path="res://assets/HangerGame/decoration/medievalTile_234.png" type="Texture" id=4]
[ext_resource path="res://assets/Font.tres" type="Theme" id=5]
[ext_resource path="res://assets/sounds/jingles_PIZZI16.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/HangerGame/decoration/medievalTile_187.png" type="Texture" id=7]
[ext_resource path="res://assets/HangerGame/decoration/medievalTile_029.png" type="Texture" id=8]
[ext_resource path="res://assets/sounds/error_008.wav" type="AudioStream" id=9]
[ext_resource path="res://Tutorial/Scales.gd" type="Script" id=10]
[ext_resource path="res://Tutorial/Blocks.gd" type="Script" id=11]
[ext_resource path="res://assets/HangerGame/Wall.tres" type="TileSet" id=12]
[ext_resource path="res://assets/HangerGame/decoration/medievalTile_075.png" type="Texture" id=13]
[ext_resource path="res://Tutorial/TutorialPlayer.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/ShakeCamera/ShakeCamera2D.tscn" type="PackedScene" id=15]

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true

[sub_resource type="RectangleShape2D" id=2]

[node name="TutorialBalance" type="Node2D"]
script = ExtResource( 2 )

[node name="ShakeCamera2D" parent="." instance=ExtResource( 15 )]
position = Vector2( 512, 300 )
current = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="Wall" type="TileMap" parent="."]
modulate = Color( 0.458824, 0.458824, 0.458824, 1 )
scale = Vector2( 8, 8 )
tile_set = ExtResource( 12 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 6, 0, 1, 4, 0, 2, 4, 0, 3, 4, 0, 4, 4, 0, 5, 4, 0, 6, 4, 0, 7, 5, 0, 65536, 2, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 3, 0, 131072, 2, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 3, 0, 196608, 2, 0, 196609, 1, 0, 196610, 1, 0, 196611, 1, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 3, 0, 262144, 2, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0 )

[node name="Players" type="Node2D" parent="."]
position = Vector2( 512, 0 )

[node name="Player" parent="Players" instance=ExtResource( 14 )]
position = Vector2( 0, 370 )

[node name="Scales" type="KinematicBody2D" parent="." groups=["floor", "scale"]]
position = Vector2( 512, 386 )
script = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Scales"]
polygon = PoolVector2Array( 396, -166, 397, 12, -396, 12, -396, -166, -376, -166, -376, -12, 376, -12, 376, -166 )

[node name="Polygon2D" type="Polygon2D" parent="Scales"]
color = Color( 0.419608, 0.278431, 0.156863, 1 )
polygon = PoolVector2Array( -390, -12, 361.228, -12, 390, -12, 390, 12, -390, 12 )

[node name="Polygon2D2" type="Polygon2D" parent="Scales"]
position = Vector2( -386, 0 )
color = Color( 0.419608, 0.278431, 0.156863, 1 )
polygon = PoolVector2Array( 10, -30, -10, -30, -10, 12, 10, 12 )

[node name="Polygon2D3" type="Polygon2D" parent="Scales"]
position = Vector2( 386, 0 )
color = Color( 0.419608, 0.278431, 0.156863, 1 )
polygon = PoolVector2Array( 10, -30, -10, -30, -10, 12, 10, 12 )

[node name="Blocks" type="Node2D" parent="."]
position = Vector2( 512, 0 )
script = ExtResource( 11 )

[node name="ErrorAudio" type="AudioStreamPlayer2D" parent="Blocks"]
stream = ExtResource( 9 )

[node name="SuccessAudio" type="AudioStreamPlayer2D" parent="Blocks"]
stream = ExtResource( 6 )

[node name="Background" type="TileMap" parent="." groups=["floor"]]
tile_set = ExtResource( 3 )
cell_quadrant_size = 128
collision_mask = 3
format = 1
tile_data = PoolIntArray( 393222, 4, 0, 393224, 536870916, 0, 524288, 536870917, 0, 524290, 5, 0, 524292, 536870917, 0, 524294, 2, 0, 524296, 536870914, 0, 524298, 5, 0, 524300, 536870917, 0, 524302, 5, 0 )

[node name="Node2D" type="Node2D" parent="Background"]
modulate = Color( 0.752941, 0.752941, 0.752941, 1 )

[node name="Sprite" type="Sprite" parent="Background/Node2D"]
position = Vector2( 83, 96 )
texture = ExtResource( 7 )

[node name="Sprite2" type="Sprite" parent="Background/Node2D"]
position = Vector2( 83, 165 )
texture = ExtResource( 1 )

[node name="Sprite4" type="Sprite" parent="Background/Node2D"]
position = Vector2( 83, 233 )
texture = ExtResource( 1 )

[node name="Sprite5" type="Sprite" parent="Background/Node2D"]
position = Vector2( 83, 300 )
texture = ExtResource( 1 )

[node name="Sprite6" type="Sprite" parent="Background/Node2D"]
position = Vector2( 83, 364 )
texture = ExtResource( 1 )

[node name="Sprite7" type="Sprite" parent="Background/Node2D"]
position = Vector2( 83, 416 )
texture = ExtResource( 1 )

[node name="Sprite3" type="Sprite" parent="Background/Node2D"]
position = Vector2( 83, 477 )
texture = ExtResource( 4 )

[node name="Node2D2" type="Node2D" parent="Background"]
modulate = Color( 0.772549, 0.772549, 0.772549, 1 )

[node name="Sprite" type="Sprite" parent="Background/Node2D2"]
position = Vector2( 960, 96 )
texture = ExtResource( 8 )

[node name="Sprite2" type="Sprite" parent="Background/Node2D2"]
position = Vector2( 960, 160 )
texture = ExtResource( 13 )

[node name="Instruction" type="Control" parent="."]
margin_top = -32.0
margin_right = 40.0
margin_bottom = 8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Instruction"]
margin_left = -16.0
margin_top = 76.0
margin_right = 1049.0
margin_bottom = 208.0
color = Color( 0, 0, 0, 0.364706 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Instruction"]
margin_left = 18.0
margin_top = 92.0
margin_right = 1009.0
margin_bottom = 194.0
theme = ExtResource( 5 )
text = "This is you"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="Area2D" parent="."]
position = Vector2( 178, 363 )
scale = Vector2( 1, 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
shape = SubResource( 2 )

[node name="Right" type="Area2D" parent="."]
position = Vector2( 850, 363 )
scale = Vector2( 1, 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="even" from="Scales" to="." method="_on_scales_even"]
[connection signal="failed" from="Blocks" to="." method="_on_Blocks_failed"]
[connection signal="succeeded" from="Blocks" to="." method="_on_Blocks_succeeded"]
[connection signal="body_entered" from="Left" to="." method="_on_left_reached"]
[connection signal="body_entered" from="Right" to="." method="_on_right_reached"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
